removed old files

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h4 class="text-dark mb-4">{{random_phrase}}</h4>
+                                        <h4 class="text-dark mb-4">Welcome. Your funds are safu.</h4>
                                     </div>
                                     <form class="user" action="#" method="post">
                                         <div class="form-group"><input class="form-control form-control-user" type="text" aria-describedby="userHelp" placeholder="Enter username" name="user"></div>
@@ -40,7 +40,7 @@
                                         <hr>
                                     </form>
                                     <!-- <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div> -->
-                                    <div class="text-center"><a class="small" href="register.html">Create an Account</a></div>
+                                    <div class="text-center"><a class="small" href="{{ url_for("register") }}">Create an Account</a></div>
                                 </div>
                             </div>
                         </div>
