--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,26 @@
-{% include 'header.html' %}
+<!-- {% include 'header.html' %} -->
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Bogged.me</title>
+    <meta name="description" content="Trade cryptocurrency for fun and (make believe) profit!">
+    <link rel="icon" type="image/png" sizes="16x16" href="../static/assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../static/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../static/assets/img/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../static/assets/img/android-chrome-512x512.png">
+    <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../static/assets/bootstrap/css/custom.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bree+Serif">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Changa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Geo">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tauri">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+</head>
+
   <title>About page</title>
   <h1>Quick rundown</h1>
   <p></p>
@@ -24,4 +46,3 @@
 </ul>
   
   
-{% include 'footer.html' %}
