--- a/templates/register.html
+++ b/templates/register.html
@@ -64,7 +64,7 @@
                                 <hr>
                             </form>
                             <!-- <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div> -->
-                            <div class="text-center"><a class="small" href="login.html">Already have an account? Login here</a></div>
+                            <div class="text-center"><a class="small" href="{{ url_for("login") }}">Already have an account? Login here</a></div>
                         </div>
                     </div>
                 </div>
