--- a/templates/buy-new.html
+++ b/templates/buy-new.html
@@ -20,7 +20,8 @@
                                                         <h4>Buy Confirmation</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <p class="text-center text-muted">Confirm purchase of {{amount}} {{coin_id}} for {{price}}?</p>
+                                                        <!-- <p class="text-center text-muted">Confirm purchase of {{amount}} {{coin_id}} for {{price}}?</p> -->
+                                                        <p class="text-center text-muted">Are you sure you would like to execute this purchase?</p>
                                                     </div>
                                                     <form action="/trade" method="POST">
                                                         <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit" name="confirm_buy">Confirm</button></div>
