--- a/templates/sell-new.html
+++ b/templates/sell-new.html
@@ -16,7 +16,9 @@
                                                         <h4>Sell Confirmation</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <p class="text-center text-muted">Confirm sale of {{amount}} {{coin_id}} for {{price}}?</p>
+                                                        <!--<p class="text-center text-muted">Confirm sale of {{amount}} {{coin_id}} for {{price}}?</p> -->
+
+                                                        <p class="text-center text-muted">Are you sure you want to execute this sale?</p>
                                                     </div>
                                                     <form action="/trade" method="POST">
                                                         <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button>
