--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 <!-- {% include 'header.html' %} -->
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -22,8 +23,28 @@
 </head>
 
   <title>About page</title>
-  <h1>Quick rundown</h1>
+
   <p></p>
+<body><nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom" style="color: var(--gray-dark);background: var(--dark);border-color: var(--dark);">
+        <div class="container"><a class="navbar-brand" href="/" style="font-size: 23px;background: url(../static/assets/img/logo.png) left / contain no-repeat, var(--gray-dark);font-family: Aldrich, sans-serif;color: rgb(214,62,132);filter: brightness(99%);height: 42px;padding: 7px;text-shadow: 0px 0px 4px;border-width: 3.994898px;border-style: none;border-bottom-style: none;">&nbsp; &nbsp; &nbsp;Bogged.me</a><button data-toggle="collapse" data-target="#navbarResponsive-1" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive-1">
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="/about" style="font-family: Aldrich, sans-serif;">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/leaderboard" style="font-family: Aldrich, sans-serif;">LEADERBOARD</a></li>
+                    </ul>
+                </div>
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="/login" style="margin: 2px;font-family: Aldrich, sans-serif;">LOG IN</a></li>
+                    <li class="nav-item"><a class="nav-link border rounded border-dark" href="/register" style="box-shadow: 0px 0px rgba(204,29,29,0.5);border-width: 6px;text-shadow: 0px 0px 0px var(--light);background: var(--blue);font-family: Aldrich, sans-serif;">REGISTER</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<p></p>
+<hr>
+<h1>Quick rundown</h1>
 <ul>
 <li>Rothschilds bow to Bogdanoffs</li>
 <li>In contact with aliens</li>
@@ -44,5 +65,7 @@
 <li>The twins are about 7 decades old, from the space-time reference point of the base human currently accepted by our society</li>
 <li>In reality, they are timeless beings existing in all points of time and space from the big bang to the end of the universe. We don't know their ultimate plans yet. We hope they're benevolent beings.</li>
 </ul>
+</body>
+</html>
   
   
