--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive-1">
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="/about" style="font-family: Aldrich, sans-serif;">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about" style="font-family: Aldrich, sans-serif;">QUICK RUNDOWN</a></li>
                         <li class="nav-item"><a class="nav-link" href="/leaderboard" style="font-family: Aldrich, sans-serif;">LEADERBOARD</a></li>
                     </ul>
                 </div>
