--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Bogged.me</title>
+    <title>Quick rundown - Bogged.me</title>
     <meta name="description" content="Trade cryptocurrency for fun and (make believe) profit!">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/assets/img/favicon-32x32.png">
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-  <title>About page</title>
 
   <p></p>
 <body><nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom" style="color: var(--gray-dark);background: var(--dark);border-color: var(--dark);">
@@ -30,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive-1">
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="/about" style="font-family: Aldrich, sans-serif;">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about" style="font-family: Aldrich, sans-serif;">QUICK RUNDOWN</a></li>
                         <li class="nav-item"><a class="nav-link" href="/leaderboard" style="font-family: Aldrich, sans-serif;">LEADERBOARD</a></li>
                     </ul>
                 </div>
